examples/type_system/failing/103_missing_colon_lambda_param.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let f = \x Int -> x
